# MoviesDB

./: .env.example  .gitignore  .pycodestyle  LICENSE  pyproject.toml  requirements-lint.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/: COMMIT_CONVENTION.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: cd.yml  ci.yml
Streamlit-App/: app.py  config.toml  requirements.txt
Streamlit-App/assets/: style.grass
Streamlit-App/assets/css/: avengers.css
Streamlit-App/components/: countdown.html
Streamlit-App/modules/: graph_analyzer.py  graph_builder.py  neo4j_connector.py  ui_helpers.py
docker/: docker-compose.yml
docs/: Utilisation-script-run_pipeline.md  _config.yml  documentation.md  imdb-schema.md  index.md  neo4j-scripts-guide.md  read_marvel_wiki.md  workflow.md
docs/_includes/: head-custom.html
mysql/: imdb_add_character.sql  imdb_add_constraints.sql  imdb_add_index.sql  imdb_create_db.sql  imdb_create_movies_table.sql  imdb_create_tables.sql  imdb_load_data.sql  marvel_actors.sql  marvel_actors_characters.sql  marvel_character_appears_in_movie.sql  marvel_characters.sql  marvel_directors_movies.sql  marvel_movies.sql  marvel_producers_movies.sql
notebooks/: Create_MySQL_Database.ipynb  Run_SQL_Queries.ipynb
pipeline/: Run_pipeline.py  load_into_auradb.py  load_into_neo4j.py  pipeline_logger.py  read_marvel_wiki.py  run_pipeline.py
tests/: __init__.py  check_pep8.py  test_graph_analyzer.py  test_graph_builder.py  test_neo4j_connector.py  test_pipeline_logger.py  test_read_marvel_wiki.py  test_run_pipeline.py
utils/: delete_sqlite.sh  run_tests.sh  start_docker.sh  stop_docker.sh
